# ai-audio-assistant-web

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  AGENTS.md  ASR_QUOTA_API.md  CI_ISSUES.md  CLAUDE.md  Dockerfile  FRONTEND_INTEGRATION.md  README.md  README_EN.md  STATUS.json  TRANSCRIPT_POLISH_IMPLEMENTATION.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0f77e5aba17a_merge_visual_summary_and_rag_chunks.py  0fbaf14e43f3_add_asr_provider_capabilities.py  1b2c3d4e5f7a_seed_total_asr_quota_rows.py  2c4d5e6f7a8b_add_asr_quota_variant.py  30ade5c26128_add_transcripts_and_summaries.py  3d4e5f6a7b8c_seed_asr_quota_variants.py  4e5f6a7b8c9d_add_transcript_words.py  4f6d9b8c2f1a_add_accounts_table.py  5a6b7c8d9e0f_add_llm_usage_table.py  644f83942f7b_add_performance_indexes.py  6bb23b8bc4d0_merge_asr_pricing_with_existing_.py  6df3a190cdf6_add_task_stages_table.py  7b6a0f1d4c8f_restore_accounts_table.py  7c8d9e0f1a2b_change_asr_quota_seconds_to_float.py  7e8a9a99ea5e_merge_asr_usage_with_visual_summary.py  8e9f0a1b2c3d_add_rag_chunks_table.py  9a1b2c3d4e5f_notification_refactor_schema.py  9d0e1f2a3b4c_change_asr_used_seconds_to_float.py  a0b1c2d3e4f5_add_generation_provenance_fields.py  a1b2c3d4e5f6_add_visual_summary_fields.py  a2b3c4d5e6f7_add_youtube_subscriptions_table.py  a4c7cb1a6dbc_add_prompt_template_library_tables.py  a6c95aed96ba_init.py  aa2b7f8c1e23_add_service_config_owner.py  ab7156a5abd5_add_youtube_search_queries_table.py  b0fa397f93b6_add_notifications_table_with_improved_.py  b10c51d15914_add_blocklist_display_name.py  b1c2d3e4f5a6_add_publisher_profile_fields.py  b2c3d4e5f6a7_add_asr_usages_table.py  b3c4d5e6f7a8_add_youtube_videos_table.py  b5d8ec2b7fed_drop_prompt_template_library_tables.py  b7c3d9e1f2a0_add_images_to_summaries.py  c1d2e3f4a5b6_switch_transcript_fts_to_jieba.py  c3d4e5f6a7b8_add_asr_usage_periods_table.py  c4d5e6f7a8b9_add_subscription_customization.py  c6d7e8f9a0b1_unify_user_identity.py  c9d8e7f6a5b4_add_youtube_allowlist_table.py  c9f3c1d2e8ab_add_service_configs.py  d1e2f3a4b5c6_add_youtube_recommended_videos_table.py  d3b2a1c9f2e7_add_asr_quota_table.py  (+11 more)
app/: config.py  db.py  main.py
app/api/: deps.py  templates.py
app/core/: asr_free_quota.py  asr_scheduler.py  avatar_proxy.py  config_manager.py  cost_optimizer.py  crypto.py  exceptions.py  fault_tolerance.py  health_checker.py  i18n.py  litellm_health.py  load_balancer.py  logging_config.py  middleware.py  monitoring.py  rate_limit.py  redis.py  registry.py  response.py  security.py  smart_factory.py  task_stages.py  user_context.py  youtube_thumbnail.py
app/i18n/: codes.py  en.json  notifications.py  zh.json
app/models/: __init__.py  account.py  asr_pricing_config.py  asr_quota.py  asr_usage.py  asr_usage_period.py  asr_user_quota.py  base.py  flagged_channel.py  llm_usage.py  notification.py  prompt_template.py  rag_chunk.py  service_config.py  service_config_history.py  summary.py  task.py  task_stage.py  transcript.py  user.py  user_template_favorite.py  user_template_like.py  user_template_usage.py  youtube_allowlist.py  youtube_auto_transcribe_log.py  youtube_blocklist.py  youtube_recommended_video.py  youtube_search.py  youtube_subscription.py  youtube_summary_style_recommendation.py  youtube_video.py
app/prompts/: __init__.py  manager.py
app/schemas/: admin_costs.py  admin_task.py  asr_free_quota.py  asr_pricing_config.py  asr_quota.py  asr_usage.py  auth.py  client_error.py  common.py  config_center.py  notification.py  public.py  stats.py  summary.py  summary_style.py  task.py  template.py  template_generate.py  transcript.py  upload.py  user.py  youtube.py  youtube_allowlist.py  youtube_blocklist.py  youtube_flagged.py  youtube_search.py
app/services/: asr_free_quota_service.py  asr_pricing_service.py  asr_quota_alert.py  asr_quota_service.py  auth_service.py  avatar_service.py  config_utils.py  media_url.py  stats_service.py  task_service.py  task_stage_service.py  template_generator.py  template_service.py  transcript_polish.py  (+2 more)
docs/: ADD_GENERATE_METHOD_GUIDE.md  API.md  API_VISUAL_SUMMARY.md  ASR_QUALITY_AND_CHAPTER_STRATEGY.md  ASR_QUOTA_PLAN.md  IMPLEMENTATION_GUIDE_V1.2.md  QUICK_TEST_GUIDE.md  STATS_API_SPEC.md  SUMMARY_OPTIMIZATION_ANALYSIS.md  SUMMARY_OPTIMIZATION_PLAN_V2.md  V1.2_IMPLEMENTATION_SUMMARY.md  V1.2_INTEGRATION_COMPLETE.md  V1.2_LOCAL_TEST_REPORT.md  V1.2_TESTING_GUIDE.md  VISUAL_SUMMARY_FRONTEND_INTEGRATION.md  VISUAL_SUMMARY_FRONTEND_NEXTJS.md  VISUAL_SUMMARY_IMPLEMENTATION.md  WORKER_INTEGRATION_GUIDE.md
loadtest/: README.md
scripts/: backfill_blocklist_names.py  clean_summary_preamble.py  generate_ai_templates.py  migrate_to_prompthub.py  seed_templates.py
tests/: conftest.py  test_admin_costs_api.py  test_asr_url_redaction.py  test_auth_jwks_url.py  test_auth_preferences_cache.py  test_avatar_proxy.py  test_channel_blocked_code.py  test_client_error_schema.py  test_client_errors_api.py  test_config_prod_secrets.py  test_cost_attribution_plumbing.py  test_cost_optimizer.py  test_creator_identity_capture.py  test_dead_task_sweeper_scaffold.py  test_discover_disabled_code.py  test_error_response_contract.py  test_flag_error_code.py  test_gzip_middleware.py  test_ingest_duration_config.py  test_litellm_health_interval.py  test_llm_catalog.py  test_load_balancer.py  test_logging_trace_id.py  test_media_error_status.py  test_media_proxy.py  test_media_ticket_auth.py  test_media_url_contract.py  test_moderation_config.py  test_monitoring.py  test_moonshot_integration.py  test_notification_bus.py  test_notification_events.py  test_notification_migration.py  test_notifications_api.py  test_openapi_docs_gate.py  test_prompt_manager_image_vars.py  test_prompt_manager_normalize.py  test_prompt_manager_sdk.py  test_prompt_manager_slug_candidates.py  test_provenance_fields_migration.py  (+43 more)
worker/: celery_app.py  db.py  redis_client.py  stage_manager.py
(+256 files in other folders)
