[project]
name = "ai-audio-assistant-backend"
version = "0.1.0"
description = "AI Audio/Video Content Assistant Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "celery>=5.3.4",
    "dashscope>=1.23.4",
    "greenlet>=3.3.0",
    "redis>=5.0.1",
    "minio>=7.2.0",
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tencentcloud-sdk-python>=3.0.1000",
    "yt-dlp>=2024.12.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.34.0",
    "cos-python-sdk-v5>=1.9.32",
    "oss2>=2.19.0",
    "tos>=2.8.0",
    "pyyaml>=6.0.0",
    "ujson>=5.9.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.1.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    # Code Quality
    "pre-commit>=3.6.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    # Type Stubs
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.12",
]

# 删除 [build-system] 部分，不作为可安装包

# ========== Code Quality Tools Configuration ==========

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = false
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | alembic/versions
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["alembic/versions/*", ".venv/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "alembic/versions",
    ".venv",
    "build",
    "dist",
]
per-file-ignores = [
    "__init__.py:F401",  # 允许 __init__.py 中未使用的导入
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # 不强制类型注解（渐进式）
ignore_missing_imports = true
no_strict_optional = true
warn_no_return = true
warn_redundant_casts = true
exclude = [
    "alembic/versions",
    ".venv",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic/versions"]
skips = ["B101", "B601"]  # B101: assert使用, B601: paramiko调用

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov=worker",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
