[project]
name = "ai-audio-assistant-backend"
version = "0.1.0"
description = "AI Audio/Video Content Assistant Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "celery>=5.3.4",
    "dashscope>=1.23.4",
    "greenlet>=3.3.0",
    "redis>=5.0.1",
    "minio>=7.2.0",
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tencentcloud-sdk-python>=3.0.1000,!=3.1.37",  # 3.1.37 has PyPI CDN issues
    "aliyun-python-sdk-core>=2.15.0",
    "yt-dlp>=2024.12.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.34.0",
    "cos-python-sdk-v5>=1.9.32",
    "oss2>=2.19.0",
    "tos>=2.8.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "ujson>=5.9.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.1.0",
    # Google OAuth / YouTube API
    "google-api-python-client>=2.100.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "prompthub-sdk",
    "auth-client[fastapi]",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    # Code Quality
    "pre-commit>=3.6.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    # Type Stubs
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.12",
]

# 删除 [build-system] 部分，不作为可安装包

# ========== Code Quality Tools Configuration ==========

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904", "E402", "SIM102", "SIM103", "SIM108", "SIM117", "UP045"]  # 遗留问题，后续逐步清理

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-export 模式

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # 不强制类型注解（渐进式）
ignore_missing_imports = true
no_strict_optional = true
warn_no_return = true
warn_redundant_casts = true
exclude = [
    "alembic/versions",
    ".venv",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic/versions"]
skips = ["B101", "B601"]  # B101: assert使用, B601: paramiko调用

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov=worker",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.uv.sources]
prompthub-sdk = { path = "../../prompthub/sdk", editable = true }
auth-client = { path = "../../auth-service/auth-client", editable = true }
